TLOU 2 Improve Inf Ammo Post

--- a/_games/tlou/t1.md
+++ b/_games/tlou/t1.md
@@ -2,9 +2,12 @@
 layout: page
 title: "The Last of Us"
 excerpt: "My modifications and patches for The Last of Us."
-game-series: "nd-t1"
+feature-img: "/assets/images/t2-silencer-cheat/banner2.png"
+image: "/assets/images/t2-silencer-cheat/preview.png"
+parent-series: "tlou"
+game-series: "t1"
 bootstrap: true
-order: 20
+order: 1
 ---
 
 {% include mods-list.html series=page.game-series %}
