--- a/_posts/2021-02-11-ms3-mlaa.md
+++ b/_posts/2021-02-11-ms3-mlaa.md
@@ -9,11 +9,14 @@ feature-img: "/assets/images/ms3-mlaa/ms3-mlaa-banner.png"
 image: "/assets/images/ms3-mlaa/ms3-mlaa-banner.png"
 ---
 
-## Intro
+* TOC
+{:toc}
+
+# Intro
 
 Loved by many, MotorStorm: Apocalypse is a game fans would love to play on the PlayStation 3 Emulator RPCS3, however there was one roadblock preventing this game from shining - Pixelation when using the emulators upscaling feature.
 
-## Heavy-lifting in Hardware
+# Heavy-lifting in Hardware
 
 Morphological Anti-Aliasing is a form of post process anti-aliasing which is done using the PlayStation 3 CELL SPUs instead of the Reality Synthesizer (RSX) for extra performance.
 
@@ -51,7 +54,7 @@ Below you can find a collection of images as well as a video from RPCS3 showing 
 
 [Gallery](https://photos.app.goo.gl/hM9tATanhy2gzn2W8)
 
-<iframe width="640" height="360" src="https://www.youtube.com/embed/p_gvO2jBWwI?start=140" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/p_gvO2jBWwI?start=140" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Download
 
