try to center enbedded videos

--- a/_posts/2021-04-29-pt-60fps.md
+++ b/_posts/2021-04-29-pt-60fps.md
@@ -58,10 +58,12 @@ You may have already noticed that there is a couple of refernces to this functio
 
 Pretty self explanatory here. Just moves 1 into param 2 and then 2 gets loaded in R14 inside of the function we saw earlier. Could this be the framerate limit we have been looking for?
 
+<center>
 <video controls >
   <source src="/assets/images/pt-60fps/PT-1080-fps0-demo.mp4" type="video/mp4">
 </video>
 <em>Footage provided by Patreon Supporter: smasher248.</em>
+</center>
 
 Turns out it is! Although performance is too unstable and bounces around from 30 to 60FPS wildly. It may also be using double buffered vsync as well.
 
