minor center corrections

--- a/_posts/2021-02-11-ms3-mlaa.md
+++ b/_posts/2021-02-11-ms3-mlaa.md
@@ -54,7 +54,9 @@ Below you can find a collection of images as well as a video from RPCS3 showing 
 
 [Gallery](https://photos.app.goo.gl/hM9tATanhy2gzn2W8)
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/p_gvO2jBWwI?start=140" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div align="center" class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/p_gvO2jBWwI?start=140" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 ## Download
 
