--- a/_posts/2021-04-16-u4-60fps-dream.md
+++ b/_posts/2021-04-16-u4-60fps-dream.md
@@ -84,7 +84,9 @@ That's it!
 <em>Upscaled 540p</em>
 </p>
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/k1t4NtmV68M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div align="center" class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/k1t4NtmV68M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 # Patch
 
