--- a/_posts/2021-05-11-wif-dawn-60fps.md
+++ b/_posts/2021-05-11-wif-dawn-60fps.md
@@ -102,19 +102,20 @@ Seems like this jump will not set a zero and skip calling this function entirely
 
 Let's test this change in game.
 
-<center>
+<div align="center" class="video-container">
 <video controls >
   <source src="/assets/images/wif-dawn-60fps/dawn_60fps_preview.mp4" type="video/mp4">
 </video>
 <em>It worked!</em>
-</center>
+</div>
 
 # Result
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/Oy2CapKF3gE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div align="center" class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Oy2CapKF3gE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 # Patch
-
 
 <a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/lis/what-if-lis.md#60-fps" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code: Life is Strange</a>
 
