--- a/_posts/2021-04-29-pt-60fps.md
+++ b/_posts/2021-04-29-pt-60fps.md
@@ -58,12 +58,12 @@ You may have already noticed that there is a couple of refernces to this functio
 
 Pretty self explanatory here. Just moves 1 into param 2 and then 2 gets loaded in R14 inside of the function we saw earlier. Could this be the framerate limit we have been looking for?
 
-<center>
+<div align="center" class="video-container">
 <video controls >
   <source src="/assets/images/pt-60fps/PT-1080-fps0-demo.mp4" type="video/mp4">
 </video>
 <em>Footage provided by Patreon Supporter: smasher248.</em>
-</center>
+</div>
 
 Turns out it is! Although performance is too unstable and bounces around from 30 to 60FPS wildly. It may also be using double buffered vsync as well.
 
@@ -97,7 +97,9 @@ If anyone would like to help out and Improve on this inital release of the resol
 
 ## Results
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/WhRceDucjfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div align="center" class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WhRceDucjfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 # Patch
 
