add 1080p for 4k mode and disable dynamic res scale patch

--- a/_posts/2021-05-20-ff7r-end-60fps.md
+++ b/_posts/2021-05-20-ff7r-end-60fps.md
@@ -56,9 +56,11 @@ r.DynamicRes.MaxScreenPercentage=63 ; 63 % of target ir (720p for base)
 
 # Patch
 
-Base Console needs both Framerate and Res Scale Change to run at 60fps.
+Base Console owners will be able to run the game at 720p 60FPS.
 
-Pro console uses separate DynamicRes cvars. Multiple resolution profiles are available for PS4 Pro users. Framerate patch still required.
+Pro Console owners will be able to choose between 900p and 1080p for 60FPS.
+
+Both Consoles must have framerate patch applied to take effect.
 
 <a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/FF7R-Orbis.md#60-fps-patch" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code</a>
 
