Remove 1080p output mode for Neo (depercated!)

--- a/_posts/2021-05-20-ff7r-end-60fps.md
+++ b/_posts/2021-05-20-ff7r-end-60fps.md
@@ -60,6 +60,8 @@ Base Console owners will be able to run the game at 720p 60FPS.
 
 Pro Console owners will be able to choose between 900p and 1080p for 60FPS.
 
+Dynamic Resolution threshold can always be customized.
+
 Both Consoles must have framerate patch applied to take effect.
 
 <a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/FF7R-Orbis.md#60-fps-patch" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code</a>
