add image note include

--- a/_posts/2021-04-16-u4-60fps-dream.md
+++ b/_posts/2021-04-16-u4-60fps-dream.md
@@ -67,7 +67,7 @@ That's it!
 
 ## Results
 
-**Right Click and View Image to see detailed image.**
+{% include_relative _image_note.md %}
 
 <p align="center">
 <img src="{% link assets/images/uc4-60fps-dream/u4-patch0.png %}">
