add console note to more articles

--- a/_posts/2021-04-16-u4-60fps-dream.md
+++ b/_posts/2021-04-16-u4-60fps-dream.md
@@ -8,6 +8,8 @@ tags: [Articles, Releases]
 twitter: {card: "summary_large_image"}
 ---
 
+{% include_relative _orbis_console_note.md %}
+
 * TOC
 {:toc}
 
