--- a/_posts/2021-05-20-ff7r-end-60fps.md
+++ b/_posts/2021-05-20-ff7r-end-60fps.md
@@ -14,6 +14,8 @@ twitter: {card: "summary_large_image"}
 
 PS4 Owners gets the patch first before PS5? Unofficially of course. 🤔
 
+{% include_relative _orbis_console_note.md %}
+
 This patch was tested on a Base PlayStation 4. Users with a PS4 Pro will be able to run at a higher resolution than what's seen here. See [**Patch Section**](#patch) for more info.
 
 * TOC
