--- a/_posts/2021-04-29-pt-60fps.md
+++ b/_posts/2021-04-29-pt-60fps.md
@@ -8,6 +8,8 @@ tags: [Articles, Releases]
 twitter: {card: "summary_large_image"}
 ---
 
+{% include_relative _orbis_console_note.md %}
+
 * TOC
 {:toc}
 
