--- a/_posts/2021-02-11-ms3-mlaa.md
+++ b/_posts/2021-02-11-ms3-mlaa.md
@@ -4,8 +4,8 @@ title: "Removing Morphological Anti-Aliasing from MotorStorm: Apocalypse"
 excerpt: "Blur is no more! Shall we race safely."
 categories: patches
 tags: motorstorm ps3 rpcs3 patches
-thumbnail: "https://storage.googleapis.com/assets-illusion0001/images/ms3-mlaa/ms3-mlaa-banner.png"
 header:
+  teaser: "https://storage.googleapis.com/assets-illusion0001/images/ms3-mlaa/ms3-mlaa-banner.png"
   overlay_image: "https://storage.googleapis.com/assets-illusion0001/images/ms3-mlaa/ms3-mlaa-banner.png"
   overlay_filter: 0.5
   og_image: "https://storage.googleapis.com/assets-illusion0001/images/ms3-mlaa/ms3-mlaa-banner.png"
