Fix broken/missing pages

--- a/_posts/2021-07-01-QDR.Infraworld-Res-Letterbox-Patch.md
+++ b/_posts/2021-07-01-QDR.Infraworld-Res-Letterbox-Patch.md
@@ -55,7 +55,8 @@ The first row does nothing but the second row does.
 {% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.Res.0.png" %}
 
 <div align=center>
-<em>1600x900 Letterboxed" %}
+<em>1600x900 Letterboxed</em>
+</div>
 
 Why 900p? Yes 720p will allow for less GPU time but it caused visual issues.
 
