Migrate media assets to cloudflare

--- a/_posts/2021-04-16-u4-60fps-dream.md
+++ b/_posts/2021-04-16-u4-60fps-dream.md
@@ -23,7 +23,7 @@ I have always wonder if the resolution can be tone down in Uncharted 4, would 60
 
 For starters, resolution numbers is stored as 4 bytes. At least in Naught Dog games. A quick search for `1600` and `900` in one row shows one result . Why 900p? The multiplayer modes switches to 900p during gameplay.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/uc4-60fps-dream/ghidra-900p-search.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/uc4-60fps-dream/ghidra-900p-search.png" %}
 
 ```
 012cf1f2 48 ba 40        MOV        RDX,0x38400000640 // 1600x900
@@ -69,17 +69,17 @@ That's it!
 
 {% include_relative _image_note.md %}
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/uc4-60fps-dream/u4-patch0.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/uc4-60fps-dream/u4-patch0.png" %}
 
 <div align=center>
 <em>Native 1080p</em>
 </div>
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/uc4-60fps-dream/u4-patch1.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/uc4-60fps-dream/u4-patch1.png" %}
 
 <div align=center>
 <em>Upscaled 900p</em>
 </div>
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/uc4-60fps-dream/u4-patch2.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/uc4-60fps-dream/u4-patch2.png" %}
 
 <div align=center>
 <em>Upscaled 540p</em>
