--- a/_posts/2021-05-20-ff7r-end-60fps.md
+++ b/_posts/2021-05-20-ff7r-end-60fps.md
@@ -5,10 +5,10 @@ excerpt: "
 PS4 Owners gets the patch first before PS5? Unofficially of course."
 categories: patches
 header:
-  teaser: "https://storage.googleapis.com/assets-illusion0001/images/ff7r-end-60fps/banner2.png"
-  overlay_image: "https://storage.googleapis.com/assets-illusion0001/images/ff7r-end-60fps/banner.png"
+  teaser: "https://img-assets.illusion0001.workers.dev/assets/images/ff7r-end-60fps/banner2.png"
+  overlay_image: "https://img-assets.illusion0001.workers.dev/assets/images/ff7r-end-60fps/banner.png"
   overlay_filter: 0.5
-  og_image: "https://storage.googleapis.com/assets-illusion0001/images/ff7r-end-60fps/banner.png"
+  og_image: "https://img-assets.illusion0001.workers.dev/assets/images/ff7r-end-60fps/banner.png"
 tags: ff7r ps4 patches
 tags: [Articles, Releases]
 # twitter: {card: "summary_large_image"}
