--- a/_posts/2021-06-25-t1-ps3-mlaa-fix.md
+++ b/_posts/2021-06-25-t1-ps3-mlaa-fix.md
@@ -4,10 +4,10 @@ title: "Non MLAA Bug Fixes for The Last of Us (RPCS3)"
 excerpt: "Much closer to Playable and allows for upscaling with various improvements."
 categories: patches
 header:
-  teaser: "https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-thumbnail.png"
-  overlay_image: "https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-thumbnail.png"
+  teaser: "https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-thumbnail.png"
+  overlay_image: "https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-thumbnail.png"
   overlay_filter: 0.5
-  og_image: "https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-thumbnail.png"
+  og_image: "https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-thumbnail.png"
 tags: [Articles, Releases]
 # twitter: {card: "summary_large_image"}
 
@@ -36,31 +36,31 @@ So I asked my friend, [ZEROx](https://www.youtube.com/user/ZEROx2085/) to help o
 
 Things we wanted to improve upon:
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-0.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-0.png" %}
 
 <div align=center>
 <em>Overbloom: Menu</em>
 </div>
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-1.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-1.png" %}
 
 <div align=center>
 <em>Overbloom: In-Game</em>
 </div>
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-2.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-2.png" %}
 
 <div align=center>
 <em>Rainbow aiming reticles</em>
 </div>
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-3.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-3.png" %}
 
 <div align=center>
 <em>Grahpical issues; This place has seen better days.</em>
 </div>
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-4.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-pre-mlaa-4.png" %}
 
 <div align=center>
 <em>SPU Access Violation; This happens after a few minutes</em>
@@ -72,13 +72,13 @@ Things we wanted to improve upon:
 
 What does it do you may ask?
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-float-0.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-float-0.png" %}
 
 <div align=center>
 <em>0x12C41A4: 1.00</em>
 </div>
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-float-1.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-float-1.png" %}
 
 <div align=center>
 <em>0x12C41A4: 0.50</em>
@@ -97,7 +97,7 @@ It seems like this adjust sun's position, brightness and **other** things.. ther
 
 Welp, it didn't crash. Let's try increasing the value.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-float-2.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-float-2.png" %}
 
 <div align=center>
 <em>0x12C41A4: 0.75 It crashed after a few minutes</em>
@@ -113,7 +113,7 @@ Altering this value will also alter the values in the higher range of the game m
 
 So I then passed this off to [ZEROx](https://www.youtube.com/user/ZEROx2085/) and he discovered the area where the values are located.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-ce-1.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-ce-1.png" %}
 
 <div align=center>
 <em>Base multipliers in high region of memory</em>
@@ -123,13 +123,13 @@ We now have fine control over the float values, meaning we can tweak the individ
 
 As an example: `3F 80 00 00 01 31 89 E8 01 50 E1 98` This affects Bloom Glow.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-mlaa-wip-0.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-mlaa-wip-0.png" %}
 
 <div align=center>
 <em>Bloom Glow 1.00 (Non PostOnSpu Path)</em>
 </div>
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-mlaa-wip-1.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-mlaa-wip-1.png" %}
 
 <div align=center>
 <em>Bloom Glow 0.00 (Non PostOnSpu Path)</em>
@@ -137,13 +137,13 @@ As an example: `3F 80 00 00 01 31 89 E8 01 50 E1 98` This affects Bloom Glow.
 
 With adjustments to the float, we are left with a similar glow seen in the MLAA Path.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-post-mlaa-2.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-post-mlaa-2.png" %}
 
 <div align=center>
 <em>Bloom Values Adjusted; RPCS3 Screenshot. (Non PostOnSpu Path)</em>
 </div>
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-post-mlaa-1.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-post-mlaa-1.png" %}
 
 <div align=center>
 <em>PlayStation 3 Screenshot. (PostOnSpu Path)</em>
@@ -151,7 +151,7 @@ With adjustments to the float, we are left with a similar glow seen in the MLAA 
 
 Remember the pattern above? `01 50 E1 98` this looks like a memory address.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-ce-2.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-ce-2.png" %}
 
 [ZEROx](https://www.youtube.com/user/ZEROx2085/) came to the rescue and made a list of values used throughout the game.
 
@@ -217,7 +217,7 @@ And if it hits one condition it applies coef, its needed for the two values by u
 
 `0x150E1A0` must be 0, this affects aiming reticles.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-post-mlaa-0.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-post-mlaa-0.png" %}
 
 <div align=center>
 <em>Spot any difference?</em>
@@ -227,7 +227,7 @@ Now, we have a crash to burn.
 
 ## Part 2 - Crash Fix
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/SPU_PPU_Meme00.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/SPU_PPU_Meme00.png" %}
 
 So I went searching for the floats.
 
@@ -235,7 +235,7 @@ So I went searching for the floats.
 
 This seem to stop the crash when lowering the value to 0.5 (3F 00 00 00)
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-ce-3.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-ce-3.png" %}
 
 <div align=center>
 <em>Value cannot be edited here</em>
@@ -265,7 +265,7 @@ The result is crashing fixed during the following sections.
 
 - Go Big Horns
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-irl.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-irl.png" %}
 
 <div align=center>
 <em>October 2020 - On Vacation and fixing bugs</em>
@@ -277,7 +277,7 @@ The result is crashing fixed during the following sections.
 
 This subchapter will cause crashing if Runtime Lighting is set to GPU Lighting, one of the lighting path available in the game.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps4-dynamic-light-menu.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps4-dynamic-light-menu.png" %}
 
 <div align=center>
 <em>Menu in PlayStation 4 version</em>
@@ -305,7 +305,7 @@ The same patching method can be used here. Branch regardless of the compare cond
 
 Patch was made available back in October 2020. You can download through the emulator built-in Patch Manager.
 
-{% include img1 image_path="https://storage.googleapis.com/assets-illusion0001/images/t1-ps3-mlaa-fix/t1-ps3-rpcs3-patch.png" %}
+{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/t1-ps3-mlaa-fix/t1-ps3-rpcs3-patch.png" %}
 
 <a href="https://wiki.rpcs3.net/index.php?title=The_Last_of_Us#Patches" class="button" role="button"> <i class='fas fa-download'></i> Patch Source Code</a>
 
