Fix most broken links

--- a/_posts/2021-04-16-u4-60fps-dream.md
+++ b/_posts/2021-04-16-u4-60fps-dream.md
@@ -90,6 +90,6 @@ That's it!
 
 # Patch
 
-<a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/uncharted4.md#custom-resolution" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Codes</a>
+<a href="/_patch/Uncharted4AThiefsEnd-Orbis/" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Codes</a>
 
 {% include_relative _supporters.md %}
