--- a/_posts/2021-04-29-pt-60fps.md
+++ b/_posts/2021-04-29-pt-60fps.md
@@ -105,6 +105,6 @@ If anyone would like to help out and Improve on this inital release of the resol
 
 # Patch
 
-<a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/shgame-pt.md#60-fps" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Codes</a>
+<a href="/_patch/SilentHillsPT-Orbis" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Codes</a>
 
 {% include_relative _supporters.md %}
