--- a/_posts/2021-05-11-wif-dawn-60fps.md
+++ b/_posts/2021-05-11-wif-dawn-60fps.md
@@ -126,8 +126,8 @@ Let's test this change in game.
 
 # Patch
 
-<a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/lis/what-if-lis.md#60-fps" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code: Life is Strange</a>
+<a href="/_patch/LifeisStrange1-Orbis" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code: Life is Strange</a>
 
-<a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/lis/dawn-lis-bts.md#60-fps" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code: Life is Strange Before the Storm</a>
+<a href="/_patch/LifeisStrange1-BeforetheStorm-Orbis" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code: Life is Strange Before the Storm</a>
 
 {% include_relative _supporters.md %}
