--- a/_posts/2021-05-20-ff7r-end-60fps.md
+++ b/_posts/2021-05-20-ff7r-end-60fps.md
@@ -66,6 +66,6 @@ Dynamic Resolution threshold can always be customized.
 
 Both Consoles must have framerate patch applied to take effect.
 
-<a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/FF7R-Orbis.md#60-fps-patch" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code</a>
+<a href="/_patch/FinalFantasyVIIRemake-Orbis" class="button" role="button">{{ site.theme_settings.download_icon }} Patch Code</a>
 
 {% include_relative _supporters.md %}
