--- a/_posts/2021-07-01-QDR.Infraworld-Res-Letterbox-Patch.md
+++ b/_posts/2021-07-01-QDR.Infraworld-Res-Letterbox-Patch.md
@@ -133,6 +133,6 @@ This skips storing byte and went straight to return.
 
 # Patch
 
-<a href="https://github.com/illusion0001/illusion0001.github.io/blob/main/_patches/QDR.Infraworld-Orbis.md" class="button" role="button"><i class='fas fa-download'></i> Patch Code</a>
+<a href="/_patch/BeyondTwoSouls-Orbis" class="button" role="button"><i class='fas fa-download'></i> Patch Code</a>
 
 {% include_relative _supporters.md %}
