Migrate to Google Drive for media

--- a/_posts/2021-02-11-ms3-mlaa.md
+++ b/_posts/2021-02-11-ms3-mlaa.md
@@ -5,10 +5,10 @@ excerpt: "Blur is no more! Shall we race safely."
 categories: patches
 tags: motorstorm ps3 rpcs3 patches
 header:
-  teaser: "https://img-assets.illusion0001.workers.dev/assets/images/ms3-mlaa/ms3-mlaa-banner.png"
-  overlay_image: "https://img-assets.illusion0001.workers.dev/assets/images/ms3-mlaa/ms3-mlaa-banner.png"
+  teaser: "https://drive.google.com/uc?id=172xbmv39fzCIWh0m_S25wJ48ILQOdd7u"
+  overlay_image: "https://drive.google.com/uc?id=172xbmv39fzCIWh0m_S25wJ48ILQOdd7u"
   overlay_filter: 0.5
-  og_image: "https://img-assets.illusion0001.workers.dev/assets/images/ms3-mlaa/ms3-mlaa-banner.png"
+  og_image: "https://drive.google.com/uc?id=172xbmv39fzCIWh0m_S25wJ48ILQOdd7u"
 
 toc: true
 toc_sticky: true
@@ -31,13 +31,13 @@ Some games disable MLAA during video playback, Possibly to reduce load on SPU to
 
 This however gives us an entry point to find where this toggle is located.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/ms3-mlaa/ms3-ce-display.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1RCIYnSsSOj7dlR1tmxObnniOeFeENzU0" %}
 
 Lookie, lookie, there it is.
 
 Disabling this in-game results in Crystal Clear Image.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/ms3-mlaa/ms3-1440ir-no-mlaa.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1K9Dd_ENBQtM-Bu_CsDnyqpOXWBGUto3T" %}
 
 Awesome!
 
