--- a/_posts/2021-04-29-pt-60fps.md
+++ b/_posts/2021-04-29-pt-60fps.md
@@ -5,8 +5,8 @@ excerpt: "Now you can get spooked at 60FPS.. with some visual issues.."
 categories: patches
 tags: pt ps4 patches
 header:
-  teaser: "https://img-assets.illusion0001.workers.dev/assets/images/pt-60fps/banner.png"
-  overlay_image: "https://img-assets.illusion0001.workers.dev/assets/images/pt-60fps/banner.png"
+  teaser: "https://drive.google.com/uc?id=1q5IcNEqeHNQ9bZKcjPX7MvB0i0qyIaWn"
+  overlay_image: "https://drive.google.com/uc?id=1q5IcNEqeHNQ9bZKcjPX7MvB0i0qyIaWn"
 tags: [Articles, Releases]
 # twitter: {card: "summary_large_image"}
 
@@ -28,7 +28,7 @@ From my experince looking at other games on the PS3 and Xbox 360, frame rate lim
 
 Let's do a search for function fliprate within the P.T. executable.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/pt-60fps/pt-ghdra0.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1nYkBiE9xQgzaLdNiWORm9culrP1CezCv" %}
 
 ```
 **************************************************************
@@ -63,7 +63,7 @@ Pretty self explanatory here. Just moves 1 into param 2 and then 2 gets loaded i
 
 <div align="center">
 <video width="100%" controls >
-  <source src=https://img-assets.illusion0001.workers.dev/assets/images/pt-60fps/PT-1080-fps0-demo.mp4" type="video/mp4">
+  <source src=https://drive.google.com/uc?id=1rQ1AR9VbCSC05QS17csaKjWvgncc-7OQ" type="video/mp4">
 </video>
 <em>Footage provided by Patreon Supporter: smasher248.</em>
 </div>
@@ -74,7 +74,7 @@ Turns out it is! Although performance is too unstable and bounces around from 30
 
 Resolution values are also stored in 4 bytes.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/pt-60fps/pt-ghdra1.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1-W0Y7lbcvTSZ796BShiON1-eeQR2_oRj" %}
 
 ```
 006381be 48 b8 80        MOV        RAX,0x43800000780
@@ -84,12 +84,12 @@ Resolution values are also stored in 4 bytes.
 
 Simply changing this to 1280x720 will allow the game to boot but has some visual issues.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/pt-60fps/pt-res-b.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1AEQvlvMLvau4L3C94OjW1ERdvBdLlDcn" %}
 
 <div align=center>
 <em>Native 1080p</em>
 </div>
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/pt-60fps/pt-res-a.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1Tr5qPE2jDCbgPaW-8oLzhTrhJt9uOUpi" %}
 
 <div align=center>
 <em>Upscaled 720p</em>
