--- a/_posts/2021-07-01-QDR.Infraworld-Res-Letterbox-Patch.md
+++ b/_posts/2021-07-01-QDR.Infraworld-Res-Letterbox-Patch.md
@@ -3,10 +3,10 @@ layout: single
 title: "Patches for Beyond Two Souls 60FPS, Blackbars Remover and More"
 excerpt: "Quantic Dream Cinematic Universe improved."
 header:
-  teaser: "https://img-assets.illusion0001.workers.dev/assets/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.png"
-  overlay_image: "https://img-assets.illusion0001.workers.dev/assets/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.png"
+  teaser: "https://drive.google.com/uc?id=16OAxmcbFKILkYTax93pgxWls5YFYFQ1C"
+  overlay_image: "https://drive.google.com/uc?id=16OAxmcbFKILkYTax93pgxWls5YFYFQ1C"
   overlay_filter: 0.5
-  og_image: "https://img-assets.illusion0001.workers.dev/assets/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.png"
+  og_image: "https://drive.google.com/uc?id=16OAxmcbFKILkYTax93pgxWls5YFYFQ1C"
 categories: patches
 tags: [Articles, Releases]
 # twitter: {card: "summary_large_image"}
@@ -52,7 +52,7 @@ Resolution? Same deal. 4 byte int of `1920` came up with a few results but two r
 
 The first row does nothing but the second row does.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.Res.0.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1PmMFYdoWdVTdyyo0CoDZzPQ6t_mPkXM9" %}
 
 <div align=center>
 <em>1600x900 Letterboxed</em>
@@ -60,13 +60,13 @@ The first row does nothing but the second row does.
 
 Why 900p? Yes 720p will allow for less GPU time but it caused visual issues.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.Res.2.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1yxk7aoMvc-j01K_sh3mQQnD48Fx2OhUu" %}
 
 <div align=center>
 <em>1600x900</em>
 </div>
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.Res.3.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1VuSBMah_AF4sTkxO52Nbb_LZ5h5nn11y" %}
 
 <div align=center>
 <em>1280x720</em>
@@ -121,7 +121,7 @@ This skips storing byte and went straight to return.
 
 # Results
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/QDR.Infraworld-Res-Letterbox-Patch/QDR.Infraworld.Res.1.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1M0Okkl5qrYyocazUk_xaQRZJs6hCgp2G" %}
 
 <div align=center>
 <em>1600x900 Letterbox Removed</em>
