--- a/_posts/2021-05-11-wif-dawn-60fps.md
+++ b/_posts/2021-05-11-wif-dawn-60fps.md
@@ -5,10 +5,10 @@ excerpt: "The upgrade PS4 owners never got. Until now."
 categories: patches
 tags: lis bts ps4 patches
 header:
-  teaser: "https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/dawn-banner.png"
-  overlay_image: "https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/dawn-banner.png"
+  teaser: "https://drive.google.com/uc?id=1AuqJeJmmHfkiHooBDoR5RN_4puv_02V5"
+  overlay_image: "https://drive.google.com/uc?id=1AuqJeJmmHfkiHooBDoR5RN_4puv_02V5"
   overlay_filter: 0.5
-  og_image: "https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/banner2.png"
+  og_image: "https://drive.google.com/uc?id=1Phw1nlEbT-Ia762UUbIVbNAo9cVbZfvd"
 tags: [Articles, Releases]
 # twitter: {card: "summary_large_image"}
 
@@ -39,13 +39,13 @@ I'll use the same method of finding function responsible for controlling the tar
 
 For the first game and that is Life is Strange, searching for just `flip` yields some results. 
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/ghidra_flip_search.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1kwEEUfwyzMIaxOT1bo81gD4jsUrCgRVd" %}
 
 <div align=center>
 <em>SubmitFlip but no fliprate? Let's search for more</em>
 </div>
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/ghidra_vsync_search.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1zLyosqO0NcuwYnJJwjqPhajcmuseuJ7L" %}
 
 <div align=center>
 <em>Vsync in Unicode string came up with more interesting results</em>
@@ -62,7 +62,7 @@ For the first game and that is Life is Strange, searching for just `flip` yields
 
 togglevsync catched my interests and it points to a memory location, let's see what happens when its set to 1.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/wif_screentear.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1Y4SXMsx6MHfyTUct4r3m2_y5ufY5Zv2Z" %}
 
 <div align=center>
 <em>Unlocked Framerate! But it has no limits and introduce a lot of screen tearing</em>
@@ -79,7 +79,7 @@ togglevsync catched my interests and it points to a memory location, let's see w
 
 This looks interesting, it moves 1 into AL and there's JA which stands for Jump Above in x86 asm. I don't have much idea as to what's going on here but I tried setting this AL instruction to 0 and removing this Jump instruction seem to solve the issues I had with screen tearing and it now limits to 60FPS.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/wif-60fps.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=1gKSsUMTcWPXacf_ETL59KCW_ksVO9pL3" %}
 
 <div align=center>
 <em>Aw yeah. That's more like it. 60FPS and no Screen Tearing</em>
@@ -91,7 +91,7 @@ How about Before the Storm?
 
 This title runs on unity. Let's try to simply search for flip in function name and see what we get.
 
-{% include img1 image_path="https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/ghidra_flip_search2.png" %}
+{% include img1 image_path="https://drive.google.com/uc?id=13nlrfaXrUNtVzIFJ07rQAgbSMP3MSAe_" %}
 
 ```
 01e53d99 45 85 f6        TEST       R14D,R14D
@@ -113,7 +113,7 @@ Let's test this change in game.
 
 <div align="center">
 <video width="100%" controls >
-  <source src=https://img-assets.illusion0001.workers.dev/assets/images/wif-dawn-60fps/dawn_60fps_preview.mp4" type="video/mp4">
+  <source src=https://drive.google.com/uc?id=1Duk8Mj8P1TQoIgImTXqigp-uJPTUwW_Z" type="video/mp4">
 </video>
 <em>It worked!</em>
 </div>
