Fix links and hide some posts
Haven't bother to convert them yet, hiding it for now.

--- a/_posts/2021-02-11-ms3-mlaa.md
+++ b/_posts/2021-02-11-ms3-mlaa.md
@@ -63,4 +63,4 @@ Below you can find a collection of images as well as a video from RPCS3 showing 
 
 ## Download
 
-Since this patch is made specifically for use on an Emulator, you can download it through it's built-in patch manager or look at the source code at the [RPCS3 Wiki](https://wiki.rpcs3.net/index.php?title=MotorStorm:_Apocalypse#Patches).
+{% include_relative _generic_rpcs3_patch_note.md %}
